HTML Update to hopefully fix alignment issue

--- a/docs/style.css
+++ b/docs/style.css
@@ -31,10 +31,13 @@ h1{
 .navbar{
     align-items: center;
 }
+.title-outer-container{
+    display: flex;
+    justify-content: center;
+}
 .title-container {
     display: flex;
     align-items: center; /* Vertically center the image and text */
-    justify-content: center;
 }
 .image {
     margin-right: 20px;
